--- a/Makefile.in
+++ b/Makefile.in
@@ -294,6 +294,7 @@ provided_elcs = \
 	emacs.d/delayed-inits/org-id.elc \
 	emacs.d/delayed-inits/org-mobile.elc \
 	emacs.d/delayed-inits/org.elc \
+	emacs.d/delayed-inits/paren.elc \
 	emacs.d/delayed-inits/recentf.elc \
 	emacs.d/delayed-inits/rng-loc.elc \
 	emacs.d/delayed-inits/ruby-mode.elc \
