--- a/emacs.d/etc/schema/schemas.xml.in
+++ b/emacs.d/etc/schema/schemas.xml.in
@@ -9,5 +9,5 @@
   <typeId id="GtkBuilder" uri="gtk-builder.rnc"/>
   <typeId id="PropertyList-1.0" uri="PropertyList-1.0.rnc"/>
 
-  <include rules="~/Projects/xtrf-templates/data/schemas.xml"/>
+  <include rules="@projectsdir@/xtrf-templates/data/schemas.xml"/>
 </locatingRules>
