Add initial attempt at Velocity mode

--- a/Makefile.in
+++ b/Makefile.in
@@ -352,7 +352,8 @@ sitelisp_elcs = \
 	emacs.d/site-lisp/now-init.elc \
 	emacs.d/site-lisp/now-org.elc \
 	emacs.d/site-lisp/now-simple.elc \
-	emacs.d/site-lisp/rnc-mode.elc
+	emacs.d/site-lisp/rnc-mode.elc \
+	emacs.d/site-lisp/velocity-mode.elc
 
 userconfemacsdsitelisp_DATA = \
 	$(sitelisp_elcs) \
