--- a/configure.ac
+++ b/configure.ac
@@ -55,8 +55,10 @@ AC_CHECK_PROGS([DIFF], [diff])
 AC_ARG_VAR([DIFF], [the diff command])
 AC_CHECK_PROGS([DTACH], [dtach], [:])
 AC_ARG_VAR([DTACH], [the dtach command])
-AC_CHECK_PROGS([EMACS], [emacs])
+AC_PATH_PROGS([EMACS], [emacs])
 AC_ARG_VAR([EMACS], [the Emacs editor command])
+AC_PATH_PROGS([EMACSCLIENT], [emacsclient])
+AC_ARG_VAR([EMACSCLIENT], [the emacsclient command])
 AC_CHECK_PROGS([EXIFTOOL], [exiftool exiftool-5.22])
 AC_ARG_VAR([EXIFTOOL], [the exiftool command])
 AC_CHECK_PROGS([GZIP], [gzip])
