--- a/os/Darwin/bin/Nowmacs.scpt.in
+++ b/os/Darwin/bin/Nowmacs.scpt.in
@@ -1,15 +1,15 @@
 try
-  set frameVisible to do shell script "/Applications/MacPorts/Emacs.app/Contents/MacOS/bin/emacsclient -e '(<= 2 (length (visible-frame-list)))'"
+  set frameVisible to do shell script "@EMACSCLIENT@ -e '(<= 2 (length (visible-frame-list)))'"
   if frameVisible is not "t" then
-    do shell script "/Applications/MacPorts/Emacs.app/Contents/MacOS/bin/emacsclient -c -n"
+    do shell script "@EMACSCLIENT@ -c -n"
   end if
 on error
-  do shell script "eval `/usr/libexec/path_helper -s` && . @xdgconfighomezshdir@/.zprofile && /Applications/MacPorts/Emacs.app/Contents/MacOS/Emacs  --daemon"
-  do shell script "/Applications/MacPorts/Emacs.app/Contents/MacOS/bin/emacsclient -c -n"
+  do shell script "eval `/usr/libexec/path_helper -s` && . @xdgconfighomezshdir@/.zprofile && @EMACS@ --daemon"
+  do shell script "@EMACSCLIENT@ -c -n"
 end try
 on open of finderObjects
   repeat with i in (finderObjects)
-    do shell script "/Applications/MacPorts/Emacs.app/Contents/MacOS/bin/emacsclient -n " & quoted form of POSIX path of i
+    do shell script "@EMACSCLIENT@ -n " & quoted form of POSIX path of i
   end repeat
 end open
 tell application "Emacs" to activate
