Add Mixxx configuration

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,4 @@
 *.patch -whitespace
+/mixxx/mixxx.cfg -whitespace
 /os/Cygwin/GHISLER/languages/wcmd_now.lng crlf
 /os/Cygwin/GHISLER/tcignore.txt crlf
