--- a/emacs.d/etc/schema/schemas.xml.in
+++ b/emacs.d/etc/schema/schemas.xml.in
@@ -4,10 +4,16 @@
 
   <documentElement localName="interface" typeId="GtkBuilder"/>
   <documentElement localName="plist" typeId="PropertyList-1.0"/>
+  <documentElement localName="MixxxControllerPreset" typeId="Mixxx MIDI Controller Preset"/>
+  <documentElement localName="skin" typeId="Mixxx Skin"/>
+  <documentElement localName="Template" typeId="Mixxx Template"/>
 
   <typeId id="Entity Resolution XML Catalog" uri="catalog.rnc"/>
   <typeId id="GtkBuilder" uri="gtk-builder.rnc"/>
   <typeId id="PropertyList-1.0" uri="PropertyList-1.0.rnc"/>
+  <typeId id="Mixxx MIDI Controller Preset" uri="mixxx-midi-controller-preset.rnc"/>
+  <typeId id="Mixxx Skin" uri="mixxx-skin.rnc"/>
+  <typeId id="Mixxx Template" uri="mixxx-template.rnc"/>
 
   <include rules="@projectsdir@/xtrf-templates/data/schemas.xml"/>
 </locatingRules>
