--- a/Makefile.in
+++ b/Makefile.in
@@ -545,11 +545,13 @@ $(call DIR,bin)
 $(call DIR,libexec)
 $(call DIR,userconf,.)
 $(call DIR,userconfaudacity)
+ifneq ($(EMACS),)
 $(call DIR,userconfemacsd)
 $(call DIR,userconfemacsddelayedinits)
 $(call DIR,userconfemacsdetcschema)
 $(call DIR,userconfemacsdinits)
 $(call DIR,userconfemacsdsitelisp)
+endif
 $(call DIR,userconfmixxx)
 $(call DIR,userconfmixxxcontrollers)
 $(call DIR,userconfmixxxskinsroe)
