--- a/Makefile.in
+++ b/Makefile.in
@@ -271,6 +271,7 @@ userconfemacsd_DATA = \
 	emacs.d/now-theme.elc
 
 provided_elcs = \
+	emacs.d/delayed-inits/auth-source.elc \
 	emacs.d/delayed-inits/calc.elc \
 	emacs.d/delayed-inits/calendar.elc \
 	emacs.d/delayed-inits/cc-mode.elc \
@@ -307,6 +308,7 @@ provided_elcs = \
 	emacs.d/delayed-inits/menu-bar.elc \
 	emacs.d/delayed-inits/message.elc \
 	emacs.d/delayed-inits/minibuffer.elc \
+	emacs.d/delayed-inits/mu4e.elc \
 	emacs.d/delayed-inits/mule.elc \
 	emacs.d/delayed-inits/nnimap.elc \
 	emacs.d/delayed-inits/nxml-mode.elc \
@@ -325,9 +327,11 @@ provided_elcs = \
 	emacs.d/delayed-inits/ruby-mode.elc \
 	emacs.d/delayed-inits/scroll-bar.elc \
 	emacs.d/delayed-inits/sh-script.elc \
+	emacs.d/delayed-inits/shr.elc \
 	emacs.d/delayed-inits/simple.elc \
 	emacs.d/delayed-inits/smie.elc \
 	emacs.d/delayed-inits/smtpmail-multi.elc \
+	emacs.d/delayed-inits/smtpmail.elc \
 	emacs.d/delayed-inits/solar.elc \
 	emacs.d/delayed-inits/tabulated-list.elc \
 	emacs.d/delayed-inits/tool-bar.elc \
