Add ace-jump-mode configuration

--- a/Makefile.in
+++ b/Makefile.in
@@ -270,6 +270,7 @@ userconfemacsd_DATA = \
 	emacs.d/now-theme.elc
 
 provided_elcs = \
+	emacs.d/delayed-inits/ace-jump-mode.elc \
 	emacs.d/delayed-inits/auth-source.elc \
 	emacs.d/delayed-inits/calc.elc \
 	emacs.d/delayed-inits/calendar.elc \
