Add Science of Sharp feeds

--- a/rss2email.cfg
+++ b/rss2email.cfg
@@ -58,7 +58,7 @@ url = https://www.masteringemacs.org/feed
 url = https://hsivonen.fi/feed/atom/
 
 [feed.DJWORX]
-url = https://feeds.feedburner.com/djworx
+url = https://djworx.com/feed/
 
 [feed.Datomic]
 url = http://blog.datomic.com/feeds/posts/default
@@ -80,3 +80,9 @@ url = http://0pointer.net/blog/index.atom
 
 [feed.jwz]
 url = https://www.jwz.org/blog/feed/
+
+[feed.Science-of-Sharp]
+url = https://scienceofsharp.wordpress.com/feed/
+
+[feed.Science-of-Sharp-Comments]
+url = https://scienceofsharp.wordpress.com/comments/feed/
